<resources>
    <string name="app_name">ImgVu</string>
    <string name="connection_error">Error could not load the images</string>
    <string name="retry_btn">retry</string>
    <string name="no_results">Could not found anything for this querry</string>
    <string name="username">username</string>
    <string name="img_description">Image description</string>
    <string name="user_info">User information</string>
    <string name="creator">name of the creator</string>
    <string name="downloadno">downloads</string>
    <string name="imgdescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="instagram_profile">instagram profile</string>
    <string name="twitter_profile">twitter profile</string>
</resources>